--- a/games/wbml/text/eng/text.yaml
+++ b/games/wbml/text/eng/text.yaml
@@ -3,3 +3,4 @@ msg:
   2: "Our country depends on you."
   3: "Defeat DRAGON, and let's regain peace."
   4: "Get this sword and pill."
+  5: "What"
