--- a/games/wbml/assets/model.yaml
+++ b/games/wbml/assets/model.yaml
@@ -36,6 +36,19 @@ trunk2:
          -1, 6, 5, -1, -1, 9,5, -1,
          -1, 6, 5, 7, 4, 8, 4, 9, 4, -1,
          -1, 6, 3, 7, 3, 8, 3, 9, 3, -1]
+trunk3:
+  type: model.tiled
+  tex: gfx/wbml.png
+  img_tile_size: [16, 16]
+  size: [4,4]
+  tile_size: [16,16]
+  data: [
+      11,8,-1,-1,11,8,
+      11,7,-1,-1,11,7,
+      11,7,11,7,11,7,11,7,
+      11,6,11,6,11,6,11,6
+    ]
+
 textbg:
   type: model.tiled
   tex: gfx/wbml.png
@@ -65,6 +78,28 @@ a1:
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15,
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15,
     0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15, 0, 15, 1, 15]
+fence:
+  type: model.tiled
+  tex: gfx/wbml.png
+  img_tile_size: [8,8]
+  tile_size: [8,8]
+  size: [12, 6]
+  data: [-3, 12, 22, 19, -3, 36, 22, 20, -3, 12, 22, 19, -3, 12, 22, 18]
+castle:
+  type: model.tiled
+  tex: gfx/wbml.png
+  img_tile_size: [16,16]
+  tile_size: [16,16]
+  size: [4,7]
+  data: [
+      12,13,-1,-1,15,13,
+      12,13,-1,-1,15,13,
+      12,13,13,13,14,13,15,13,
+      12,13,13,13,14,13,15,13,
+      12,12,13,12,14,12,15,12,
+      12,13,13,13,14,13,15,13,
+      12,12,13,12,14,12,15,12,
+  ]
 a2:
   type: model.tiled
   tex: gfx/wbml.png
