--- a/games/wbml/text/eng/text.yaml
+++ b/games/wbml/text/eng/text.yaml
@@ -3,4 +3,9 @@ msg:
   2: "Our country depends on you."
   3: "Defeat DRAGON, and let's regain peace."
   4: "Get this sword and pill."
-  5: "What"
+  5: "What ?"
+  6: "Thanks"
+  7: "Jump at fence, get time."
+  8: "Play again !!"
+  9: "Amazed ?"
+  10: "DEATH god has the key to neighbor."
